--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,11 @@ body {
     margin: auto;
 }
 
+.container {
+    margin: auto;
+    max-width: 40rem;
+}
+
 .sr-only {
     position: absolute;
     top: -9999px;
@@ -35,16 +40,140 @@ h1 {
 
 /* Header */
 
+a:hover:not(.btn) {
+    color: var(--hover);
+}
+
+/* Utility Classes */
+
+.btn {
+    background-color: var(--accent);
+    border-radius: 3px;
+    color: var(--dark);
+    cursor: pointer;
+    display: inline-block;
+    padding: .5rem 4rem;
+    transition: all 0.5s ease;
+    text-decoration: none;
+}
+
+.btn:hover {
+    background-color: var(--hover);
+    color: var(--white);
+}
+
+.flex {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.inner-container {
+    max-width: 960px;
+    margin: auto;
+    padding: 0.5rem;
+}
+
+/* Navigation */
+
+header {
+    background-color: #fff;
+    box-shadow: var(--box-shadow);
+    position: sticky;
+    top: 0;
+    z-index: 1;
+}
+
+header .inner-container {
+    position: relative;
+}
+
+header svg {
+    width: 1.5rem;
+}
+
+header .toggle:hover svg path {
+    fill: var(--red);
+}
+
+.menu {
+    padding-bottom: 1rem;
+    position: absolute;
+    max-height: 0;
+    overflow: hidden;
+    width: 100%;
+    text-align: center;
+    top: 2.25rem;
+}
+
+.open .menu {
+    background-color: #fff;
+    max-height: unset;
+    overflow: visible;
+}
+
+ul {
+    list-style: none;
+    padding-left: 0;
+}
 
 /* Hero Banner */
 
 
 /* Parallax */
-
+section.about {
+    background: url('../img/splash-mobile.webp') center / cover no-repeat fixed;
+}
 
 
 /* Horizontal Scroll */
 
+.body-copy p {
+    font-size: 1.25em;
+    line-height: 1.3;
+    opacity: 0.85;
+}
+
+.scroll-wrapper {
+    display: flex;
+    flex-wrap: nowrap;
+    margin-bottom: 5rem;
+    overflow-x: scroll;
+}
+
+.card {
+    border: 1px solid #ddd;
+    border-radius: 0.2rem;
+    box-shadow: 3px 3px 3px #eee;
+    flex: 0 0 24rem;
+    margin: 2rem 1rem;
+}
+
+.card img {
+    border-radius: 0.2rem 0.2rem 0 0;
+}
+
+.card-body {
+    text-align: center;
+}
+
+/* This is for webkit browsers only */
+.scroll-wrapper::-webkit-scrollbar {
+    background-color: #eee;
+    width: 0.5rem;
+}
+
+.scroll-wrapper::-webkit-scrollbar-thumb {
+    border-radius: 2rem;
+    background-color: #444;
+}
+
+/* As of 2022, this is for Firefox only */
+
+.scroll-wrapper {
+    scrollbar-color: #444 #eee;
+    scrollbar-width: thin;
+}
 
 
 /* Footer */
@@ -52,5 +181,7 @@ h1 {
 
 
 @media screen and (min-width: 50rem) {
-
+    section.about {
+        background: url('../img/splash.webp') center / cover no-repeat fixed;
+    }
 }
